--- a/config_template/config.json
+++ b/config_template/config.json
@@ -24,8 +24,8 @@
   "dns": {
     "servers": [
       {"tag": "proxyDns", "address": "https://dns.google/dns-query", "address_resolver": "defaultDns", "address_strategy": "ipv4_only", "detour": "🚀 节点选择"},
-      {"tag": "localDns", "address": "https://dns.alidns.com/dns-query", "address_resolver": "defaultDns", "address_strategy": "ipv6_only",  "detour": "🎯 全球直连"},
-      {"tag": "defaultDns", "address": "223.5.5.5", "address_strategy": "ipv6_only", "detour": "🎯 全球直连"}
+      {"tag": "localDns", "address": "https://dns.alidns.com/dns-query", "address_resolver": "defaultDns", "detour": "🎯 全球直连"},
+      {"tag": "defaultDns", "address": "223.5.5.5", "address_strategy": "ipv4_only", "detour": "🎯 全球直连"}
     ],
     "rules": [
       { "outbound": "any", "server": "defaultDns", "disable_cache": true },
