--- a/config_template/config.json
+++ b/config_template/config.json
@@ -23,9 +23,9 @@
   
   "dns": {
     "servers": [
-      {"tag": "proxyDns", "address": "https://dns.google/dns-query", "address_resolver": "defaultDns", "address_strategy": "ipv4_only", "detour": "🚀 节点选择"},
-      {"tag": "localDns", "address": "10.10.10.99", "address_resolver": "defaultDns", "strategy": "ipv6_only", "detour": "🎯 全球直连"},
-      {"tag": "defaultDns", "address": "223.5.5.5", "address_strategy": "ipv4_only", "detour": "🎯 全球直连"}
+      {"tag": "proxyDns", "address": "local", "address_resolver": "defaultDns", "strategy": "ipv4_only", "disable_cache": false, "detour": "🚀 节点选择"},
+      {"tag": "localDns", "address": "223.5.5.5", "address_resolver": "defaultDns", "strategy": "prefer_ipv6", "disable_cache": false, "detour": "🎯 全球直连"},
+      {"tag": "defaultDns", "address": "223.5.5.5", "strategy": "ipv4_only", "disable_cache": false, "detour": "🎯 全球直连"}
     ],
     "rules": [
       { "outbound": "any", "server": "defaultDns", "disable_cache": true },
