--- a/config_template/config.json
+++ b/config_template/config.json
@@ -29,10 +29,10 @@
     ],
     "rules": [
       { "outbound": "any", "server": "defaultDns", "disable_cache": true },
-      { "clash_mode": "direct", "server": "localDns", "disable_cache": false },
-      { "clash_mode": "global", "server": "proxyDns", "disable_cache": false },
-      { "rule_set": "geosite-cn", "server": "localDns", "disable_cache": false },
-      { "rule_set": "geosite-geolocation-!cn", "server": "proxyDns", "disable_cache": false }
+      { "clash_mode": "direct", "server": "localDns" },
+      { "clash_mode": "global", "server": "proxyDns" },
+      { "rule_set": "geosite-cn", "server": "localDns" },
+      { "rule_set": "geosite-geolocation-!cn", "server": "proxyDns" }
     ],
     "final": "localDns",
     "strategy": "ipv4_only"
