--- a/config_template/config.json
+++ b/config_template/config.json
@@ -22,10 +22,11 @@
   },
   
   "dns": {
+    "disable_cache": false,
     "servers": [
-      {"tag": "proxyDns", "address": "https://dns.google/dns-query", "address_resolver": "defaultDns", "address_strategy": "ipv4_only", "detour": "🚀 节点选择"},
-      {"tag": "localDns", "address": "223.5.5.5", "address_resolver": "defaultDns", "strategy": "prefer_ipv6", "detour": "🎯 全球直连"},
-      {"tag": "defaultDns", "address": "223.5.5.5", "address_strategy": "ipv4_only", "detour": "🎯 全球直连"}
+      {"tag": "proxyDns", "address": "8.8.8.8", "address_resolver": "defaultDns", "strategy": "ipv4_only", "detour": "🚀 节点选择"},
+      {"tag": "localDns", "address": "https://dns.alidns.com/dns-query", "address_resolver": "defaultDns", "strategy": "prefer_ipv6", "detour": "🎯 全球直连"},
+      {"tag": "defaultDns", "address": "223.5.5.5", "detour": "🎯 全球直连"}
     ],
     "rules": [
       { "outbound": "any", "server": "defaultDns", "disable_cache": true },
